RESOLVED FIXED308655
Fix percent-height replaced elements computing stale preferred widths in shrink-to-fit
https://bugs.webkit.org/show_bug.cgi?id=308655
Summary Fix percent-height replaced elements computing stale preferred widths in shri...
Ahmad Saleem
Reported 2026-02-25 10:31:40 PST
ssia
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-25 10:31:48 PST
Ahmad Saleem
Comment 2 2026-02-25 10:33:37 PST
EWS
Comment 3 2026-03-29 19:47:45 PDT
Committed 310194@main (24698a846ffd): <https://commits.webkit.org/310194@main> Reviewed commits have been landed. Closing PR #59432 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.